backend: optional enhancements – order, email, type/diameter parsing

--- a/backend/.env
+++ b/backend/.env
@@ -37,7 +37,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=null://null
+MAILER_DSN=smtp://09acfdaf572bd9:379d8ed9a0b46c@sandbox.smtp.mailtrap.io:587?encryption=ssl&auth_mode=login
 ###< symfony/mailer ###
 
 ###> nelmio/cors-bundle ###
