--- a/backend/config/packages/nelmio_cors.yaml
+++ b/backend/config/packages/nelmio_cors.yaml
@@ -6,8 +6,10 @@ nelmio_cors:
     allow_headers: ["Content-Type", "Authorization"]
     expose_headers: ["Link"]
     max_age: 3600
+    allow_credentials: true
   paths:
     "^/api/":
-      allow_origin: ["*"]
-      allow_methods: ["GET", "OPTIONS"]
-      allow_headers: ["Content-Type"]
+      allow_origin: ["http://localhost:5173"]
+      allow_methods: ["GET", "OPTIONS", "POST", "PUT", "PATCH", "DELETE"]
+      allow_headers: ["Content-Type", "Authorization"]
+      allow_credentials: true
