--- a/backend/config/packages/monolog.yaml
+++ b/backend/config/packages/monolog.yaml
@@ -1,6 +1,13 @@
 monolog:
     channels:
-        - deprecation # Deprecations are logged in the dedicated "deprecation" channel when it exists
+       - 'deprecation' # Deprecations are logged in the dedicated "deprecation" channel when it exists
+    handlers:
+        main:
+            type: rotating_file
+            max_files: 30
+            path: '%kernel.logs_dir%/%kernel.environment%.log'
+            level: debug
+            channels: ['!event', '!doctrine']
 
 when@dev:
     monolog:
